# xarray-ome

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  main.py  plan.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api.md  conf.py  contributing.md  examples.md  index.md  metadata_mapping.md  usage.md
docs/examples/: basic_usage.md  channel_labels.md
examples/: .gitignore  README.md  basic_reading.py  download_sample.py  idr_channel_labels.py  inspect_structure.py
tests/: __init__.py  conftest.py  test_backend.py  test_basic.py  test_integration.py  test_metadata_conversion.py  test_transforms.py  test_writer.py
xarray_ome/: __init__.py  _store_utils.py  backend.py  metadata.py  reader.py  transforms.py  writer.py
