[project]
name = "xarray-ome"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray>=2024.10.0",
    "ngff-zarr>=0.8.0",
    "zarr>=2.18.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "s3fs>=2025.9.0",
    "matplotlib>=3.10.6",
    "ipympl>=0.9.7",
]

[project.entry-points."xarray.backends"]
ome-zarr = "xarray_ome.backend:OmeZarrBackendEntrypoint"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["xarray_ome"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
]

[dependency-groups]
dev = [
  "hatch-vcs>=0.5.0",
  "ipython>=9.6.0",
  "jupyterlab>=4.4.9",
  "jupyterlab-vim>=4.1.4",
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.13.1",
]
docs = [
  "sphinx>=7.0.0",
  "myst-parser>=2.0.0",
  "sphinx-book-theme>=1.0.0",
  "sphinxcontrib-mermaid>=0.9.0",
  "sphinx-design>=0.5.0",
  "sphinx-autobuild>=2024.0.0",
]
